[package]
name = "oboegaki"
version = "1.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
getopts = "0.2"

[[bin]]
name = "obo"
path = "src/main.rs"